include/visa.h

    /*- VISA Types --------------------------------------------------------------*/
    typedef ViObject ViEvent;
    typedef ViEvent _VI_PTR ViPEvent;
    typedef ViObject ViFindList;
    typedef ViFindList _VI_PTR ViPFindList;
    typedef ViUInt64 ViBusAddress;
    typedef ViUInt64 ViBusSize;
    typedef ViUInt64 ViAttrState;
typedef ViUInt32 ViBusAddress;
typedef ViUInt32 ViBusSize;
typedef ViUInt32 ViAttrState;
    typedef ViUInt64 ViBusAddress64;
    typedef ViBusAddress64 _VI_PTR ViPBusAddress64;
    typedef ViUInt32 ViEventType;
    typedef ViEventType _VI_PTR ViPEventType;
    typedef ViEventType _VI_PTR ViAEventType;
    typedef void _VI_PTR ViPAttrState;
    typedef ViAttr _VI_PTR ViPAttr;
    typedef ViAttr _VI_PTR ViAAttr;
    typedef ViString ViKeyId;
    typedef ViConstString ViConstKeyId;
    typedef ViPString ViPKeyId;
    typedef ViUInt32 ViJobId;
    typedef ViJobId _VI_PTR ViPJobId;
    typedef ViUInt32 ViAccessMode;
    typedef ViAccessMode _VI_PTR ViPAccessMode;
    typedef ViBusAddress _VI_PTR ViPBusAddress;
    typedef ViUInt32 ViEventFilter;
    typedef va_list ViVAList;
    typedef ViStatus(_VI_FUNCH _VI_PTR ViHndlr)(ViSession vi, ViEventType eventType, ViEvent event, ViAddr userHandle);
    /*- Resource Manager Functions and Operations -------------------------------*/

    ViStatus _VI_FUNC viOpenDefaultRM(ViPSession vi);
    ViStatus _VI_FUNC viFindRsrc(ViSession sesn, ViConstString expr, ViPFindList vi,
                                 ViPUInt32 retCnt, ViChar _VI_FAR desc[]);
    ViStatus _VI_FUNC viFindNext(ViFindList vi, ViChar _VI_FAR desc[]);
    ViStatus _VI_FUNC viParseRsrc(ViSession rmSesn, ViConstRsrc rsrcName,
                                  ViPUInt16 intfType, ViPUInt16 intfNum);
    ViStatus _VI_FUNC viParseRsrcEx(ViSession rmSesn, ViConstRsrc rsrcName, ViPUInt16 intfType,
                                    ViPUInt16 intfNum, ViChar _VI_FAR rsrcClass[],
                                    ViChar _VI_FAR expandedUnaliasedName[],
                                    ViChar _VI_FAR aliasIfExists[]);
    ViStatus _VI_FUNC viOpen(ViSession sesn, ViConstRsrc name, ViAccessMode mode,
                             ViUInt32 timeout, ViPSession vi);
    /*- Resource Template Operations --------------------------------------------*/

    ViStatus _VI_FUNC viClose(ViObject vi);
    ViStatus _VI_FUNC viSetAttribute(ViObject vi, ViAttr attrName, ViAttrState attrValue);
    ViStatus _VI_FUNC viGetAttribute(ViObject vi, ViAttr attrName, void _VI_PTR attrValue);
    ViStatus _VI_FUNC viStatusDesc(ViObject vi, ViStatus status, ViChar _VI_FAR desc[]);
    ViStatus _VI_FUNC viTerminate(ViObject vi, ViUInt16 degree, ViJobId jobId);
    ViStatus _VI_FUNC viLock(ViSession vi, ViAccessMode lockType, ViUInt32 timeout,
                             ViConstKeyId requestedKey, ViChar _VI_FAR accessKey[]);
    ViStatus _VI_FUNC viUnlock(ViSession vi);
    ViStatus _VI_FUNC viEnableEvent(ViSession vi, ViEventType eventType, ViUInt16 mechanism,
                                    ViEventFilter context);
    ViStatus _VI_FUNC viDisableEvent(ViSession vi, ViEventType eventType, ViUInt16 mechanism);
    ViStatus _VI_FUNC viDiscardEvents(ViSession vi, ViEventType eventType, ViUInt16 mechanism);
#define VI_ATTR_USER_DATA_32 (0x3FFF0007UL)
#define VI_ATTR_WIN_BASE_ADDR_32 (0x3FFF0098UL)
#define VI_ATTR_WIN_SIZE_32 (0x3FFF009AUL)
#define VI_ATTR_MEM_BASE_32 (0x3FFF00ADUL)
#define VI_ATTR_MEM_SIZE_32 (0x3FFF00DDUL)
#define VI_ATTR_PXI_MEM_BASE_BAR0_32 (0x3FFF0221UL)
#define VI_ATTR_PXI_MEM_BASE_BAR1_32 (0x3FFF0222UL)
#define VI_ATTR_PXI_MEM_BASE_BAR2_32 (0x3FFF0223UL)
#define VI_ATTR_PXI_MEM_BASE_BAR3_32 (0x3FFF0224UL)
#define VI_ATTR_PXI_MEM_BASE_BAR4_32 (0x3FFF0225UL)
#define VI_ATTR_PXI_MEM_BASE_BAR5_32 (0x3FFF0226UL)
#define VI_ATTR_PXI_MEM_BASE_BAR0_64 (0x3FFF0228UL)
#define VI_ATTR_PXI_MEM_BASE_BAR1_64 (0x3FFF0229UL)
#define VI_ATTR_PXI_MEM_BASE_BAR2_64 (0x3FFF022AUL)
#define VI_ATTR_PXI_MEM_BASE_BAR3_64 (0x3FFF022BUL)
#define VI_ATTR_PXI_MEM_BASE_BAR4_64 (0x3FFF022CUL)
#define VI_ATTR_PXI_MEM_BASE_BAR5_64 (0x3FFF022DUL)
#define VI_ATTR_PXI_MEM_SIZE_BAR0_32 (0x3FFF0231UL)
#define VI_ATTR_PXI_MEM_SIZE_BAR1_32 (0x3FFF0232UL)
#define VI_ATTR_PXI_MEM_SIZE_BAR2_32 (0x3FFF0233UL)
#define VI_ATTR_PXI_MEM_SIZE_BAR3_32 (0x3FFF0234UL)
#define VI_ATTR_PXI_MEM_SIZE_BAR4_32 (0x3FFF0235UL)
#define VI_ATTR_PXI_MEM_SIZE_BAR5_32 (0x3FFF0236UL)
#define VI_ATTR_PXI_MEM_SIZE_BAR0_64 (0x3FFF0238UL)
#define VI_ATTR_PXI_MEM_SIZE_BAR1_64 (0x3FFF0239UL)
#define VI_ATTR_PXI_MEM_SIZE_BAR2_64 (0x3FFF023AUL)
#define VI_ATTR_PXI_MEM_SIZE_BAR3_64 (0x3FFF023BUL)
#define VI_ATTR_PXI_MEM_SIZE_BAR4_64 (0x3FFF023CUL)
#define VI_ATTR_PXI_MEM_SIZE_BAR5_64 (0x3FFF023DUL)
#define VI_ATTR_RET_COUNT_32 (0x3FFF4026UL)
#define VI_ATTR_USER_DATA_64 (0x3FFF000AUL)
#define VI_ATTR_RET_COUNT_64 (0x3FFF4028UL)
#define VI_ATTR_USER_DATA (VI_ATTR_USER_DATA_64)
#define VI_ATTR_RET_COUNT (VI_ATTR_RET_COUNT_64)
#define VI_ATTR_USER_DATA (VI_ATTR_USER_DATA_32)
#define VI_ATTR_RET_COUNT (VI_ATTR_RET_COUNT_32)
#define VI_ATTR_WIN_BASE_ADDR_64 (0x3FFF009BUL)
#define VI_ATTR_WIN_SIZE_64 (0x3FFF009CUL)
#define VI_ATTR_MEM_BASE_64 (0x3FFF00D0UL)
#define VI_ATTR_MEM_SIZE_64 (0x3FFF00D1UL)
#define VI_ATTR_WIN_BASE_ADDR (VI_ATTR_WIN_BASE_ADDR_64)
#define VI_ATTR_WIN_SIZE (VI_ATTR_WIN_SIZE_64)
#define VI_ATTR_MEM_BASE (VI_ATTR_MEM_BASE_64)
#define VI_ATTR_MEM_SIZE (VI_ATTR_MEM_SIZE_64)
#define VI_ATTR_PXI_MEM_BASE_BAR0 (VI_ATTR_PXI_MEM_BASE_BAR0_64)
#define VI_ATTR_PXI_MEM_BASE_BAR1 (VI_ATTR_PXI_MEM_BASE_BAR1_64)
#define VI_ATTR_PXI_MEM_BASE_BAR2 (VI_ATTR_PXI_MEM_BASE_BAR2_64)
#define VI_ATTR_PXI_MEM_BASE_BAR3 (VI_ATTR_PXI_MEM_BASE_BAR3_64)
#define VI_ATTR_PXI_MEM_BASE_BAR4 (VI_ATTR_PXI_MEM_BASE_BAR4_64)
#define VI_ATTR_PXI_MEM_BASE_BAR5 (VI_ATTR_PXI_MEM_BASE_BAR5_64)
#define VI_ATTR_PXI_MEM_SIZE_BAR0 (VI_ATTR_PXI_MEM_SIZE_BAR0_64)
#define VI_ATTR_PXI_MEM_SIZE_BAR1 (VI_ATTR_PXI_MEM_SIZE_BAR1_64)
#define VI_ATTR_PXI_MEM_SIZE_BAR2 (VI_ATTR_PXI_MEM_SIZE_BAR2_64)
#define VI_ATTR_PXI_MEM_SIZE_BAR3 (VI_ATTR_PXI_MEM_SIZE_BAR3_64)
#define VI_ATTR_PXI_MEM_SIZE_BAR4 (VI_ATTR_PXI_MEM_SIZE_BAR4_64)
#define VI_ATTR_PXI_MEM_SIZE_BAR5 (VI_ATTR_PXI_MEM_SIZE_BAR5_64)
#define VI_ATTR_WIN_BASE_ADDR (VI_ATTR_WIN_BASE_ADDR_32)
#define VI_ATTR_WIN_SIZE (VI_ATTR_WIN_SIZE_32)
#define VI_ATTR_MEM_BASE (VI_ATTR_MEM_BASE_32)
#define VI_ATTR_MEM_SIZE (VI_ATTR_MEM_SIZE_32)
#define VI_ATTR_PXI_MEM_BASE_BAR0 (VI_ATTR_PXI_MEM_BASE_BAR0_32)
#define VI_ATTR_PXI_MEM_BASE_BAR1 (VI_ATTR_PXI_MEM_BASE_BAR1_32)
#define VI_ATTR_PXI_MEM_BASE_BAR2 (VI_ATTR_PXI_MEM_BASE_BAR2_32)
#define VI_ATTR_PXI_MEM_BASE_BAR3 (VI_ATTR_PXI_MEM_BASE_BAR3_32)
#define VI_ATTR_PXI_MEM_BASE_BAR4 (VI_ATTR_PXI_MEM_BASE_BAR4_32)
#define VI_ATTR_PXI_MEM_BASE_BAR5 (VI_ATTR_PXI_MEM_BASE_BAR5_32)
#define VI_ATTR_PXI_MEM_SIZE_BAR0 (VI_ATTR_PXI_MEM_SIZE_BAR0_32)
#define VI_ATTR_PXI_MEM_SIZE_BAR1 (VI_ATTR_PXI_MEM_SIZE_BAR1_32)
#define VI_ATTR_PXI_MEM_SIZE_BAR2 (VI_ATTR_PXI_MEM_SIZE_BAR2_32)
#define VI_ATTR_PXI_MEM_SIZE_BAR3 (VI_ATTR_PXI_MEM_SIZE_BAR3_32)
#define VI_ATTR_PXI_MEM_SIZE_BAR4 (VI_ATTR_PXI_MEM_SIZE_BAR4_32)
#define VI_ATTR_PXI_MEM_SIZE_BAR5 (VI_ATTR_PXI_MEM_SIZE_BAR5_32)
#define VI_WIDTH_32 (4)
#define VI_WIDTH_64 (8)
#define VI_GPIB_REN_DEASSERT (0)
#define VI_GPIB_REN_ASSERT (1)
#define VI_GPIB_REN_DEASSERT_GTL (2)
#define VI_GPIB_REN_ASSERT_ADDRESS (3)
#define VI_GPIB_REN_ASSERT_LLO (4)
#define VI_GPIB_REN_ASSERT_ADDRESS_LLO (5)
#define VI_GPIB_REN_ADDRESS_GTL (6)
#define VI_GPIB_ATN_DEASSERT (0)
#define VI_GPIB_ATN_ASSERT (1)
#define VI_GPIB_ATN_DEASSERT_HANDSHAKE (2)
#define VI_GPIB_ATN_ASSERT_IMMEDIATE (3)
#define VI_GPIB_HS488_DISABLED (0)
#define VI_GPIB_HS488_NIMPL (-1)
#define VI_GPIB_UNADDRESSED (0)
#define VI_GPIB_TALKER (1)
#define VI_GPIB_LISTENER (2)
#define VI_VXI_CMD16 (0x0200)
#define VI_VXI_CMD16_RESP16 (0x0202)
#define VI_VXI_RESP16 (0x0002)
#define VI_VXI_CMD32 (0x0400)
#define VI_VXI_CMD32_RESP16 (0x0402)
#define VI_VXI_CMD32_RESP32 (0x0404)
#define VI_VXI_RESP32 (0x0004)
#define VI_ASSERT_SIGNAL (-1)
#define VI_ASSERT_USE_ASSIGNED (0)
#define VI_ASSERT_IRQ1 (1)
#define VI_ASSERT_IRQ2 (2)
#define VI_ASSERT_IRQ3 (3)
#define VI_ASSERT_IRQ4 (4)
#define VI_ASSERT_IRQ5 (5)
#define VI_ASSERT_IRQ6 (6)
#define VI_ASSERT_IRQ7 (7)
#define VI_UTIL_ASSERT_SYSRESET (1)
#define VI_UTIL_ASSERT_SYSFAIL (2)
#define VI_UTIL_DEASSERT_SYSFAIL (3)
#define VI_VXI_CLASS_MEMORY (0)
#define VI_VXI_CLASS_EXTENDED (1)
#define VI_VXI_CLASS_MESSAGE (2)
#define VI_VXI_CLASS_REGISTER (3)
#define VI_VXI_CLASS_OTHER (4)
#define VI_PXI_ADDR_NONE (0)
#define VI_PXI_ADDR_MEM (1)
#define VI_PXI_ADDR_IO (2)
#define VI_PXI_ADDR_CFG (3)
#define VI_TRIG_UNKNOWN (-1)
#define VI_PXI_LBUS_STAR_TRIG_BUS_0 (1000)
#define VI_PXI_LBUS_STAR_TRIG_BUS_1 (1001)
#define VI_PXI_LBUS_STAR_TRIG_BUS_2 (1002)
#define VI_PXI_LBUS_STAR_TRIG_BUS_3 (1003)
#define VI_PXI_LBUS_STAR_TRIG_BUS_4 (1004)
#define VI_PXI_LBUS_STAR_TRIG_BUS_5 (1005)
#define VI_PXI_LBUS_STAR_TRIG_BUS_6 (1006)
#define VI_PXI_LBUS_STAR_TRIG_BUS_7 (1007)
#define VI_PXI_LBUS_STAR_TRIG_BUS_8 (1008)
#define VI_PXI_LBUS_STAR_TRIG_BUS_9 (1009)
#define VI_PXI_STAR_TRIG_CONTROLLER (1413)
#define VI_ERROR_INV_SESSION (VI_ERROR_INV_OBJECT)
#define VI_INFINITE (VI_TMO_INFINITE)
#define VI_NORMAL (VI_PROT_NORMAL)
#define VI_FDC (VI_PROT_FDC)
#define VI_HS488 (VI_PROT_HS488)
#define VI_ASRL488 (VI_PROT_4882_STRS)
#define VI_ASRL_IN_BUF (VI_IO_IN_BUF)
#define VI_ASRL_OUT_BUF (VI_IO_OUT_BUF)
#define VI_ASRL_IN_BUF_DISCARD (VI_IO_IN_BUF_DISCARD)
#define VI_ASRL_OUT_BUF_DISCARD (VI_IO_OUT_BUF_DISCARD)