src/prebind/bindings.rs

pub const VI_WIDTH_32: ViUInt32 = 4;
pub const VI_WIDTH_64: ViUInt32 = 8;
pub const VI_GPIB_REN_DEASSERT: ViUInt32 = 0;
pub const VI_GPIB_REN_ASSERT: ViUInt32 = 1;
pub const VI_GPIB_REN_DEASSERT_GTL: ViUInt32 = 2;
pub const VI_GPIB_REN_ASSERT_ADDRESS: ViUInt32 = 3;
pub const VI_GPIB_REN_ASSERT_LLO: ViUInt32 = 4;
pub const VI_GPIB_REN_ASSERT_ADDRESS_LLO: ViUInt32 = 5;
pub const VI_GPIB_REN_ADDRESS_GTL: ViUInt32 = 6;
pub const VI_GPIB_ATN_DEASSERT: ViUInt32 = 0;
pub const VI_GPIB_ATN_ASSERT: ViUInt32 = 1;
pub const VI_GPIB_ATN_DEASSERT_HANDSHAKE: ViUInt32 = 2;
pub const VI_GPIB_ATN_ASSERT_IMMEDIATE: ViUInt32 = 3;
pub const VI_GPIB_HS488_DISABLED: ViUInt32 = 0;
pub const VI_GPIB_HS488_NIMPL: ViInt32 = -1;
pub const VI_GPIB_UNADDRESSED: ViUInt32 = 0;
pub const VI_GPIB_TALKER: ViUInt32 = 1;
pub const VI_GPIB_LISTENER: ViUInt32 = 2;
pub const VI_VXI_CMD16: ViUInt32 = 512;
pub const VI_VXI_CMD16_RESP16: ViUInt32 = 514;
pub const VI_VXI_RESP16: ViUInt32 = 2;
pub const VI_VXI_CMD32: ViUInt32 = 1024;
pub const VI_VXI_CMD32_RESP16: ViUInt32 = 1026;
pub const VI_VXI_CMD32_RESP32: ViUInt32 = 1028;
pub const VI_VXI_RESP32: ViUInt32 = 4;
pub const VI_ASSERT_SIGNAL: ViInt32 = -1;
pub const VI_ASSERT_USE_ASSIGNED: ViUInt32 = 0;
pub const VI_ASSERT_IRQ1: ViUInt32 = 1;
pub const VI_ASSERT_IRQ2: ViUInt32 = 2;
pub const VI_ASSERT_IRQ3: ViUInt32 = 3;
pub const VI_ASSERT_IRQ4: ViUInt32 = 4;
pub const VI_ASSERT_IRQ5: ViUInt32 = 5;
pub const VI_ASSERT_IRQ6: ViUInt32 = 6;
pub const VI_ASSERT_IRQ7: ViUInt32 = 7;
pub const VI_UTIL_ASSERT_SYSRESET: ViUInt32 = 1;
pub const VI_UTIL_ASSERT_SYSFAIL: ViUInt32 = 2;
pub const VI_UTIL_DEASSERT_SYSFAIL: ViUInt32 = 3;
pub const VI_VXI_CLASS_MEMORY: ViUInt32 = 0;
pub const VI_VXI_CLASS_EXTENDED: ViUInt32 = 1;
pub const VI_VXI_CLASS_MESSAGE: ViUInt32 = 2;
pub const VI_VXI_CLASS_REGISTER: ViUInt32 = 3;
pub const VI_VXI_CLASS_OTHER: ViUInt32 = 4;
pub const VI_PXI_ADDR_NONE: ViUInt32 = 0;
pub const VI_PXI_ADDR_MEM: ViUInt32 = 1;
pub const VI_PXI_ADDR_IO: ViUInt32 = 2;
pub const VI_PXI_ADDR_CFG: ViUInt32 = 3;
pub const VI_TRIG_UNKNOWN: ViInt32 = -1;
pub const VI_PXI_LBUS_STAR_TRIG_BUS_0: ViUInt32 = 1000;
pub const VI_PXI_LBUS_STAR_TRIG_BUS_1: ViUInt32 = 1001;
pub const VI_PXI_LBUS_STAR_TRIG_BUS_2: ViUInt32 = 1002;
pub const VI_PXI_LBUS_STAR_TRIG_BUS_3: ViUInt32 = 1003;
pub const VI_PXI_LBUS_STAR_TRIG_BUS_4: ViUInt32 = 1004;
pub const VI_PXI_LBUS_STAR_TRIG_BUS_5: ViUInt32 = 1005;
pub const VI_PXI_LBUS_STAR_TRIG_BUS_6: ViUInt32 = 1006;
pub const VI_PXI_LBUS_STAR_TRIG_BUS_7: ViUInt32 = 1007;
pub const VI_PXI_LBUS_STAR_TRIG_BUS_8: ViUInt32 = 1008;
pub const VI_PXI_LBUS_STAR_TRIG_BUS_9: ViUInt32 = 1009;
pub const VI_PXI_STAR_TRIG_CONTROLLER: ViUInt32 = 1413;
pub const VI_ERROR_INV_SESSION: ViInt32 = -1073807346;
pub const VI_INFINITE: ViUInt32 = 4294967295;
pub const VI_NORMAL: ViUInt32 = 1;
pub const VI_FDC: ViUInt32 = 2;
pub const VI_HS488: ViUInt32 = 3;
pub const VI_ASRL488: ViUInt32 = 4;
pub const VI_ASRL_IN_BUF: ViUInt32 = 16;
pub const VI_ASRL_OUT_BUF: ViUInt32 = 32;
pub const VI_ASRL_IN_BUF_DISCARD: ViUInt32 = 64;
pub const VI_ASRL_OUT_BUF_DISCARD: ViUInt32 = 128;
pub type va_list = __builtin_va_list;
pub type __gnuc_va_list = __builtin_va_list;

// !!!
macro_rules! c_macros_to_rust_consts {
    ($(#define $name:ident ($value:ident))*) => {
        $(pub const $name: ViUInt32 = $value;)*
    };
}

#[cfg(target_pointer_width = "64")]
c_macros_to_rust_consts! {
    #define VI_ATTR_USER_DATA (VI_ATTR_USER_DATA_64)
    #define VI_ATTR_RET_COUNT (VI_ATTR_RET_COUNT_64)
    #define VI_ATTR_WIN_BASE_ADDR (VI_ATTR_WIN_BASE_ADDR_64)
    #define VI_ATTR_WIN_SIZE (VI_ATTR_WIN_SIZE_64)
    #define VI_ATTR_MEM_BASE (VI_ATTR_MEM_BASE_64)
    #define VI_ATTR_MEM_SIZE (VI_ATTR_MEM_SIZE_64)
    #define VI_ATTR_PXI_MEM_BASE_BAR0 (VI_ATTR_PXI_MEM_BASE_BAR0_64)
    #define VI_ATTR_PXI_MEM_BASE_BAR1 (VI_ATTR_PXI_MEM_BASE_BAR1_64)
    #define VI_ATTR_PXI_MEM_BASE_BAR2 (VI_ATTR_PXI_MEM_BASE_BAR2_64)
    #define VI_ATTR_PXI_MEM_BASE_BAR3 (VI_ATTR_PXI_MEM_BASE_BAR3_64)
    #define VI_ATTR_PXI_MEM_BASE_BAR4 (VI_ATTR_PXI_MEM_BASE_BAR4_64)
    #define VI_ATTR_PXI_MEM_BASE_BAR5 (VI_ATTR_PXI_MEM_BASE_BAR5_64)
    #define VI_ATTR_PXI_MEM_SIZE_BAR0 (VI_ATTR_PXI_MEM_SIZE_BAR0_64)
    #define VI_ATTR_PXI_MEM_SIZE_BAR1 (VI_ATTR_PXI_MEM_SIZE_BAR1_64)
    #define VI_ATTR_PXI_MEM_SIZE_BAR2 (VI_ATTR_PXI_MEM_SIZE_BAR2_64)
    #define VI_ATTR_PXI_MEM_SIZE_BAR3 (VI_ATTR_PXI_MEM_SIZE_BAR3_64)
    #define VI_ATTR_PXI_MEM_SIZE_BAR4 (VI_ATTR_PXI_MEM_SIZE_BAR4_64)
    #define VI_ATTR_PXI_MEM_SIZE_BAR5 (VI_ATTR_PXI_MEM_SIZE_BAR5_64)
}

#[cfg(not(target_pointer_width = "64"))]
c_macros_to_rust_consts! {
    #define VI_ATTR_USER_DATA (VI_ATTR_USER_DATA_32)
    #define VI_ATTR_RET_COUNT (VI_ATTR_RET_COUNT_32)
    #define VI_ATTR_WIN_BASE_ADDR (VI_ATTR_WIN_BASE_ADDR_32)
    #define VI_ATTR_WIN_SIZE (VI_ATTR_WIN_SIZE_32)
    #define VI_ATTR_MEM_BASE (VI_ATTR_MEM_BASE_32)
    #define VI_ATTR_MEM_SIZE (VI_ATTR_MEM_SIZE_32)
    #define VI_ATTR_PXI_MEM_BASE_BAR0 (VI_ATTR_PXI_MEM_BASE_BAR0_32)
    #define VI_ATTR_PXI_MEM_BASE_BAR1 (VI_ATTR_PXI_MEM_BASE_BAR1_32)
    #define VI_ATTR_PXI_MEM_BASE_BAR2 (VI_ATTR_PXI_MEM_BASE_BAR2_32)
    #define VI_ATTR_PXI_MEM_BASE_BAR3 (VI_ATTR_PXI_MEM_BASE_BAR3_32)
    #define VI_ATTR_PXI_MEM_BASE_BAR4 (VI_ATTR_PXI_MEM_BASE_BAR4_32)
    #define VI_ATTR_PXI_MEM_BASE_BAR5 (VI_ATTR_PXI_MEM_BASE_BAR5_32)
    #define VI_ATTR_PXI_MEM_SIZE_BAR0 (VI_ATTR_PXI_MEM_SIZE_BAR0_32)
    #define VI_ATTR_PXI_MEM_SIZE_BAR1 (VI_ATTR_PXI_MEM_SIZE_BAR1_32)
    #define VI_ATTR_PXI_MEM_SIZE_BAR2 (VI_ATTR_PXI_MEM_SIZE_BAR2_32)
    #define VI_ATTR_PXI_MEM_SIZE_BAR3 (VI_ATTR_PXI_MEM_SIZE_BAR3_32)
    #define VI_ATTR_PXI_MEM_SIZE_BAR4 (VI_ATTR_PXI_MEM_SIZE_BAR4_32)
    #define VI_ATTR_PXI_MEM_SIZE_BAR5 (VI_ATTR_PXI_MEM_SIZE_BAR5_32)
}

// !!!

/// A UInt that is the same size as the target's pointer width
// !!!
#[cfg(target_pointer_width = "64")]
pub type ViUIntPtrSize = ViUInt64;
#[cfg(not(target_pointer_width = "64"))]
pub type ViUIntPtrSize = ViUInt32;
// !!!

pub type ViUInt64 = ::std::os::raw::c_ulonglong;
pub type ViInt64 = ::std::os::raw::c_longlong;
pub type ViPUInt64 = *mut ViUInt64;
pub type ViAUInt64 = *mut ViUInt64;
pub type ViPInt64 = *mut ViInt64;
pub type ViAInt64 = *mut ViInt64;
pub type ViUInt32 = ::std::os::raw::c_ulong;
pub type ViPUInt32 = *mut ViUInt32;
pub type ViAUInt32 = *mut ViUInt32;
pub type ViInt32 = ::std::os::raw::c_long;
pub type ViPInt32 = *mut ViInt32;
pub type ViAInt32 = *mut ViInt32;
pub type ViUInt16 = ::std::os::raw::c_ushort;
pub type ViPUInt16 = *mut ViUInt16;
pub type ViAUInt16 = *mut ViUInt16;
pub type ViInt16 = ::std::os::raw::c_short;
pub type ViPInt16 = *mut ViInt16;
pub type ViAInt16 = *mut ViInt16;
pub type ViUInt8 = ::std::os::raw::c_uchar;
pub type ViPUInt8 = *mut ViUInt8;
pub type ViAUInt8 = *mut ViUInt8;
pub type ViInt8 = ::std::os::raw::c_schar;
pub type ViPInt8 = *mut ViInt8;
pub type ViAInt8 = *mut ViInt8;
pub type ViChar = ::std::os::raw::c_char;
pub type ViPChar = *mut ViChar;
pub type ViAChar = *mut ViChar;
pub type ViByte = ::std::os::raw::c_uchar;
pub type ViPByte = *mut ViByte;
pub type ViAByte = *mut ViByte;
pub type ViAddr = *mut ::std::os::raw::c_void;
pub type ViPAddr = *mut ViAddr;
pub type ViAAddr = *mut ViAddr;
pub type ViReal32 = f32;
pub type ViPReal32 = *mut ViReal32;
pub type ViAReal32 = *mut ViReal32;
pub type ViReal64 = f64;
pub type ViPReal64 = *mut ViReal64;
pub type ViAReal64 = *mut ViReal64;
pub type ViBuf = ViPByte;
pub type ViConstBuf = *const ViByte;
pub type ViPBuf = ViPByte;
pub type ViABuf = *mut ViPByte;
pub type ViString = ViPChar;
pub type ViConstString = *const ViChar;
pub type ViPString = ViPChar;
pub type ViAString = *mut ViPChar;
pub type ViRsrc = ViString;
pub type ViConstRsrc = ViConstString;
pub type ViPRsrc = ViString;
pub type ViARsrc = *mut ViString;
pub type ViBoolean = ViUInt16;
pub type ViPBoolean = *mut ViBoolean;
pub type ViABoolean = *mut ViBoolean;
pub type ViStatus = ViInt32;
pub type ViPStatus = *mut ViStatus;
pub type ViAStatus = *mut ViStatus;
pub type ViVersion = ViUInt32;
pub type ViPVersion = *mut ViVersion;
pub type ViAVersion = *mut ViVersion;
pub type ViObject = ViUInt32;
pub type ViPObject = *mut ViObject;
pub type ViAObject = *mut ViObject;
pub type ViSession = ViObject;
pub type ViPSession = *mut ViSession;
pub type ViASession = *mut ViSession;
pub type ViAttr = ViUInt32;
pub type ViEvent = ViObject;
pub type ViPEvent = *mut ViEvent;
pub type ViFindList = ViObject;
pub type ViPFindList = *mut ViFindList;
// !!!
pub type ViBusAddress = ViUIntPtrSize;
pub type ViBusSize = ViUIntPtrSize;
pub type ViAttrState = ViUIntPtrSize;
// !!!
pub type ViBusAddress64 = ViUInt64;
pub type ViPBusAddress64 = *mut ViBusAddress64;
pub type ViEventType = ViUInt32;
pub type ViPEventType = *mut ViEventType;
pub type ViAEventType = *mut ViEventType;
pub type ViPAttrState = *mut ::std::os::raw::c_void;
pub type ViPAttr = *mut ViAttr;
pub type ViAAttr = *mut ViAttr;
pub type ViKeyId = ViString;
pub type ViConstKeyId = ViConstString;
pub type ViPKeyId = ViPString;
pub type ViJobId = ViUInt32;
pub type ViPJobId = *mut ViJobId;
pub type ViAccessMode = ViUInt32;
pub type ViPAccessMode = *mut ViAccessMode;
pub type ViPBusAddress = *mut ViBusAddress;
pub type ViEventFilter = ViUInt32;
pub type ViVAList = va_list;
pub type ViHndlr = ::std::option::Option<
    unsafe extern "system" fn(
        vi: ViSession,
        eventType: ViEventType,
        event: ViEvent,
        userHandle: ViAddr,
    ) -> ViStatus,
>;
extern "system" {
    pub fn viOpenDefaultRM(vi: ViPSession) -> ViStatus;
}
extern "system" {
    pub fn viFindRsrc(
        sesn: ViSession,
        expr: ViConstString,
        vi: ViPFindList,
        retCnt: ViPUInt32,
        desc: *mut ViChar,
    ) -> ViStatus;
}
extern "system" {
    pub fn viFindNext(vi: ViFindList, desc: *mut ViChar) -> ViStatus;
}
extern "system" {
    pub fn viParseRsrc(
        rmSesn: ViSession,
        rsrcName: ViConstRsrc,
        intfType: ViPUInt16,
        intfNum: ViPUInt16,
    ) -> ViStatus;
}
extern "system" {
    pub fn viParseRsrcEx(
        rmSesn: ViSession,
        rsrcName: ViConstRsrc,
        intfType: ViPUInt16,
        intfNum: ViPUInt16,
        rsrcClass: *mut ViChar,
        expandedUnaliasedName: *mut ViChar,
        aliasIfExists: *mut ViChar,
    ) -> ViStatus;
}
extern "system" {
    pub fn viOpen(
        sesn: ViSession,
        name: ViConstRsrc,
        mode: ViAccessMode,
        timeout: ViUInt32,
        vi: ViPSession,
    ) -> ViStatus;
}
extern "system" {
    pub fn viClose(vi: ViObject) -> ViStatus;
}
extern "system" {
    pub fn viSetAttribute(vi: ViObject, attrName: ViAttr, attrValue: ViAttrState) -> ViStatus;
}
extern "system" {
    pub fn viGetAttribute(
        vi: ViObject,
        attrName: ViAttr,
        attrValue: *mut ::std::os::raw::c_void,
    ) -> ViStatus;
}
extern "system" {
    pub fn viStatusDesc(vi: ViObject, status: ViStatus, desc: *mut ViChar) -> ViStatus;
}
extern "system" {
    pub fn viTerminate(vi: ViObject, degree: ViUInt16, jobId: ViJobId) -> ViStatus;
}
extern "system" {
    pub fn viLock(
        vi: ViSession,
        lockType: ViAccessMode,
        timeout: ViUInt32,
        requestedKey: ViConstKeyId,
        accessKey: *mut ViChar,
    ) -> ViStatus;
}
extern "system" {
    pub fn viUnlock(vi: ViSession) -> ViStatus;
}
extern "system" {
    pub fn viEnableEvent(
        vi: ViSession,
        eventType: ViEventType,
        mechanism: ViUInt16,
        context: ViEventFilter,
    ) -> ViStatus;
}
extern "system" {
    pub fn viDisableEvent(vi: ViSession, eventType: ViEventType, mechanism: ViUInt16) -> ViStatus;
}
extern "system" {
    pub fn viDiscardEvents(vi: ViSession, eventType: ViEventType, mechanism: ViUInt16) -> ViStatus;
}
